--- a/style.css
+++ b/style.css
@@ -5,23 +5,22 @@
     border: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Edu+VIC+WA+NT+Beginner", sans-serif;
+    font-family: "Arial", sans-serif;
 
 }
 
 .Formulario{
-    background: white (255, 255, 255);
-    max-width: 350px;
+    background: rgb(168, 230, 235);
+    max-width: 300x; /* Define uma largura máxima para o formulário */
     min-height: 40vh;
     padding: 2rem;
-    box-shadow: 5px 5px 15px #000ff0;
-    border-radius: 8px; 
+    box-shadow: 5px 5px 15px #6c75eb;
+    border-radius: 8px;
 }
 
 body {
-    /* background-image: url('./fundo.png'); */
+    /* background-image: url('./imagebg.png'); */
     background: linear-gradient(45deg,#5afdfd, #f37cf3);
-    background-repeat: no-repeat;
     min-height: 100vh;
     min-height: 100vh;
     display:flex;
@@ -29,7 +28,18 @@ body {
     justify-content: center;
 }
 
-.bg-image {
+#imagemf{
+    background-image: url('./imagebg.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
