--- a/dash.css
+++ b/dash.css
@@ -1,21 +1,7 @@
 * {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin: 5px;
     font-family: "Arial", sans-serif;
 
-}
-
-.resume {
-    display: 30px;
-    padding: auto;
-    gap: 30px;
-    width: 100%;
-    justify-content: center;
-    flex-wrap: wrap;
-    background: #feffb1;
-    box-shadow: 5px 5px 15px #e3eb6c
 }
 
 main {
@@ -24,10 +10,69 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 body {
     height: 100vh;
     display: flex;
-    justify-content: center
+    justify-content: center;
+    background: linear-gradient(50deg,#f8ffc8, #f1b1f1);
+    background-repeat: no-repeat;
+    min-height: 100vh;
+}
+
+.resume {
+    display: flex;
+    padding: 10px 0;
+    gap: 40px;
+    width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.resume>div {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 0px 1px;
+    border-radius: 10px;
+    padding: 10px;
+    width: 150px;
+    }
+
+#incomes {
+    box-shadow: 0px 0px 1px;
+    padding-left: 2px;
+    border-radius: 4px;
+    background: white;
+    border: 1px solid #124904
+}
+
+#expenses {
+    box-shadow: 0px 0px 1px;
+    padding-left: 2px;
+    border-radius: 4px;
+    background: white;
+    border: 1px solid #6b0606
+}
+
+#total {
+    box-shadow: 0px 0px 1px;
+    padding-left: 2px;
+    border-radius: 4px;
+    background: white;
+    border: 1px solid #00415a
+}
+
+.entradas {
+border: 1px solid #124904;
+background: #e6ffe0;
+}
+.saidas {
+border: 1px solid #6b0606;
+background: #ffe1e1;
+}
+.total {
+border: 1px solid #00415a;
+background: #c4eeff;
+
 }
