--- a/dash.css
+++ b/dash.css
@@ -1,7 +1,26 @@
 * {
-    margin: 5px;
+    margin: 8px;
     font-family: "Arial", sans-serif;
 
+}
+
+.sidebar {
+    width: 250px;
+    background-color: #bcdaf8;
+    color: #000000;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    margin: 0;
+}
+
+.main-content {
+    margin-left: 250px;
+    padding: 20px;
+    width: 100%;
+    height: 100vh;
 }
 
 main {
@@ -76,3 +95,51 @@ border: 1px solid #00415a;
 background: #c4eeff;
 
 }
+
+.divType, .divAmount, .divDesc {
+    border: 1px solid  #026085;
+    background: white;
+    border-radius: 4px;
+}
+
+.botonNew {
+    border: 1px solid  #000000;
+    background: white;
+    border-radius: 4px;
+}
+
+table{
+    width: 100%;
+}
+
+.divTable {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    margin: 20px 0;
+    padding: 20px;
+    width: 100%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.columnAmount, .columnType {
+    text-align: right;
+}
+
+#bodytable {
+    padding: 100%;
+}
+.direita{
+    text-align: left;
+}
+
+
+.esquerda{
+    text-align: right;
+}
+
+desc {
+    text-align: right;
+}
+
