--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     border: 0;
-    padding: 0;
+    padding: 10px;
     box-sizing: border-box;
     font-family: "Arial", sans-serif;
 
